# localPDub

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  DATA_MODEL.md  LICENSE  README.md  SECURITY.md  SYNC_PROTOCOL.md  build-cross.sh  build.sh  test_cli.exp
.github/workflows/: build-release.yml  ci.yml
cli/: CMakeLists.txt  SYNC_IMPLEMENTATION.md  build-cross.sh  build.sh  interact_cli.py  setup_test_vaults.sh  test_colors.sh  test_final_sync.sh  test_localpdub.sh  test_sync.sh  test_sync_comprehensive.sh  test_sync_deadlock_fix.sh  test_sync_simulation.sh  test_sync_timeout_input.sh
cli/cmake/: toolchain-arm32.cmake  toolchain-arm64.cmake
cli/src/: main.cpp
cmake/: toolchain-aarch64.cmake
core/: CMakeLists.txt
core/include/localpdub/: crypto.h  history.h  localpdub.h  models.h  sync.h
core/include/sync/: network_discovery.h  sync_manager.h
core/include/ui/: ansi_colors.h
core/src/crypto/: crypto.cpp
core/src/storage/: vault_storage.cpp
core/src/sync/: network_discovery.cpp  sync_manager.cpp
docs/: DIRECT_CONNECT_DESIGN.md  WSL_NETWORKING.md
scripts/: build-arm64-deps.sh
